src/test/ui/rust-2018/local-path-suggestions-2015.stderr
error[E0432]: unresolved import `foobar`
  --> $DIR/local-path-suggestions-2015.rs:24:5
   |
LL | use foobar::Baz; //~ ERROR unresolved import `foobar`
   |     ^^^^^^ did you mean `aux_baz::foobar`?

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
